# bitcoin-wallet

./: README.md
nordic_code/: .gitignore  CMakeLists.txt  README.rst  prj.conf
nordic_code/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
nordic_code/build_1/Kconfig/: Kconfig.shield.defconfig
nordic_code/build_1/modules/azure-sdk-for-c/: cmake_install.cmake
nordic_code/build_1/modules/canopennode/: cmake_install.cmake
nordic_code/build_1/modules/cmsis/: cmake_install.cmake
nordic_code/build_1/modules/cmsis-nn/: cmake_install.cmake
nordic_code/build_1/modules/hal_nordic/: cmake_install.cmake
nordic_code/build_1/modules/hal_wurthelektronik/: cmake_install.cmake
nordic_code/build_1/modules/mcuboot/: cmake_install.cmake
nordic_code/build_1/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
nordic_code/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts.pre  zephyr.stat
nordic_code/include/: base58.h  buttons.h  generateAddress.h  hex_bytes.h  menu.h  pk2hash.h  privateKey.h  publicKey.h
nordic_code/src/: base58.c  buttons.c  crypto.c  crypto.h  generateAddress.c  hex_bytes.c  main.c  memzero.c  menu.c  pk2hash.c  privateKey.c  publicKey.c  ripemd160.c
(+123 files in other folders)
